@@ -2,7 +2,6 @@ package greencity.service;
 
 import greencity.client.RestClient;
 import greencity.constant.ErrorMessage;
-import greencity.dto.todolistitem.BulkSaveCustomToDoListItemDto;
 import greencity.dto.todolistitem.CustomToDoListItemResponseDto;
 import greencity.dto.todolistitem.CustomToDoListItemSaveRequestDto;
 import greencity.dto.todolistitem.CustomToDoListItemVO;
@@ -13,6 +12,7 @@ import greencity.entity.HabitAssign;
 import greencity.entity.User;
 import greencity.entity.UserToDoListItem;
 import greencity.enums.ToDoListItemStatus;
+import greencity.enums.UserToDoListItemStatus;
 import greencity.exception.exceptions.BadRequestException;
 import greencity.exception.exceptions.CustomToDoListItemNotSavedException;
 import greencity.exception.exceptions.NotFoundException;
@@ -24,9 +24,9 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 import java.util.stream.Collectors;
+
 import lombok.AllArgsConstructor;
 import org.modelmapper.ModelMapper;
-import org.modelmapper.TypeToken;
 import org.springframework.dao.EmptyResultDataAccessException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -54,14 +54,13 @@ public class CustomToDoListItemServiceImpl implements CustomToDoListItemService 
      */
     @Transactional
     @Override
-    public List<CustomToDoListItemResponseDto> save(BulkSaveCustomToDoListItemDto bulkSave, Long userId,
-        Long habitAssignId) {
+    public List<CustomToDoListItemResponseDto> save(List<CustomToDoListItemSaveRequestDto> dtoList, Long userId,
+                                                    Long habitAssignId) {
         UserVO userVO = restClient.findById(userId);
         HabitAssign habitAssign = habitAssignRepo.findById(habitAssignId)
             .orElseThrow(() -> new NotFoundException(ErrorMessage.HABIT_NOT_FOUND_BY_ID + habitAssignId));
         User user = modelMapper.map(userVO, User.class);
-        List<CustomToDoListItemSaveRequestDto> dto = bulkSave.getCustomToDoListItemSaveRequestDtoList();
-        List<String> errorMessages = findDuplicates(dto, user, habitAssign.getHabit());
+        List<String> errorMessages = findDuplicates(dtoList, user, habitAssign.getHabit());
         if (!errorMessages.isEmpty()) {
             throw new CustomToDoListItemNotSavedException(
                 ErrorMessage.CUSTOM_TO_DO_LIST_ITEM_WHERE_NOT_SAVED + errorMessages);
@@ -74,7 +73,7 @@ public class CustomToDoListItemServiceImpl implements CustomToDoListItemService 
         return user.getCustomToDoListItems().stream()
             .map(customToDoListItem -> modelMapper.map(customToDoListItem,
                 CustomToDoListItemResponseDto.class))
-            .collect(Collectors.toList());
+            .toList();
     }
 
     /**
@@ -93,7 +92,7 @@ public class CustomToDoListItemServiceImpl implements CustomToDoListItemService 
         for (CustomToDoListItemSaveRequestDto el : dto) {
             CustomToDoListItem customToDoListItem = modelMapper.map(el, CustomToDoListItem.class);
             List<CustomToDoListItem> duplicate = user.getCustomToDoListItems().stream()
-                .filter(o -> o.getText().equals(customToDoListItem.getText())).toList();
+                .filter(o -> o.getText().equals(customToDoListItem.getText()) && o.getHabit().getId().equals(habit.getId())).toList();
             if (duplicate.isEmpty()) {
                 customToDoListItem.setUser(user);
                 customToDoListItem.setHabit(habit);
@@ -113,54 +112,11 @@ public class CustomToDoListItemServiceImpl implements CustomToDoListItemService 
      */
     @Transactional
     @Override
-    public List<CustomToDoListItemResponseDto> findAll() {
-        return customToDoListItemRepo.findAll().stream()
-            .map(customToDoListItem -> modelMapper.map(customToDoListItem,
-                CustomToDoListItemResponseDto.class))
-            .collect(Collectors.toList());
-    }
-
-    /**
-     * {@inheritDoc}
-     *
-     * @author Bogdan Kuzenko.
-     */
-    @Transactional
-    @Override
-    public CustomToDoListItemResponseDto findById(Long id) {
-        return modelMapper.map(findOne(id), CustomToDoListItemResponseDto.class);
-    }
-
-    /**
-     * {@inheritDoc}
-     *
-     * @author Bogdan Kuzenko.
-     */
-    @Transactional
-    @Override
     public CustomToDoListItemResponseDto updateItemStatus(Long userId, Long itemId, String itemStatus) {
         CustomToDoListItem customToDoListItem =
             customToDoListItemRepo.findByUserIdAndItemId(userId, itemId);
-        if (customToDoListItem == null) {
-            throw new NotFoundException(CUSTOM_TO_DO_LIST_ITEM_NOT_FOUND_BY_ID);
-        }
-        if (itemStatus.equalsIgnoreCase(ToDoListItemStatus.DONE.name())) {
-            customToDoListItem.setStatus(ToDoListItemStatus.DONE);
-            return modelMapper.map(customToDoListItemRepo.save(customToDoListItem),
-                CustomToDoListItemResponseDto.class);
-        }
-        if (itemStatus.equalsIgnoreCase(ToDoListItemStatus.ACTIVE.name())) {
-            customToDoListItem.setStatus(ToDoListItemStatus.ACTIVE);
-            return modelMapper.map(customToDoListItemRepo.save(customToDoListItem),
-                CustomToDoListItemResponseDto.class);
-        }
-        if (itemStatus.equalsIgnoreCase(ToDoListItemStatus.DISABLED.name())) {
-            customToDoListItem.setStatus(ToDoListItemStatus.DISABLED);
-            return modelMapper.map(customToDoListItemRepo.save(customToDoListItem),
-                CustomToDoListItemResponseDto.class);
-        }
-        if (itemStatus.equalsIgnoreCase(ToDoListItemStatus.INPROGRESS.name())) {
-            customToDoListItem.setStatus(ToDoListItemStatus.INPROGRESS);
+        if (Arrays.stream(ToDoListItemStatus.values()).map(Enum::name).toList().contains(itemStatus.toUpperCase())) {
+            customToDoListItem.setStatus(ToDoListItemStatus.valueOf(itemStatus.toUpperCase()));
             return modelMapper.map(customToDoListItemRepo.save(customToDoListItem),
                 CustomToDoListItemResponseDto.class);
         }
@@ -174,10 +130,10 @@ public class CustomToDoListItemServiceImpl implements CustomToDoListItemService 
      */
     @Override
     public void updateItemStatusToDone(Long userId, Long itemId) {
-        Long userToDoListItemId = userToDoListItemRepo.getByUserAndItemId(userId, itemId)
+        Long userToDoListItemId = userToDoListItemRepo.getCustomToDoItemIdByUserAndItemId(userId, itemId)
             .orElseThrow(() -> new NotFoundException(CUSTOM_TO_DO_LIST_ITEM_NOT_FOUND_BY_ID + " " + itemId));
         UserToDoListItem userToDoListItem = userToDoListItemRepo.getReferenceById(userToDoListItemId);
-        userToDoListItem.setStatus(ToDoListItemStatus.DONE);
+        userToDoListItem.setStatus(UserToDoListItemStatus.DONE);
         userToDoListItemRepo.save(userToDoListItem);
     }
 
@@ -188,34 +144,9 @@ public class CustomToDoListItemServiceImpl implements CustomToDoListItemService 
      */
     @Transactional
     @Override
-    public List<CustomToDoListItemResponseDto> findAllByUserAndHabit(Long userId, Long habitId) {
-        List<CustomToDoListItemResponseDto> customToDoListItems =
-            customToDoListItemRepo.findAllByUserIdAndHabitId(userId, habitId).stream()
-                .map(customToDoListItem -> modelMapper.map(customToDoListItem,
-                    CustomToDoListItemResponseDto.class))
-                .collect(Collectors.toList());
-        if (!customToDoListItems.isEmpty()) {
-            return customToDoListItems;
-        } else {
-            throw new NotFoundException(ErrorMessage.CUSTOM_TO_DO_LIST_ITEM_NOT_FOUND);
-        }
-    }
-
-    /**
-     * {@inheritDoc}
-     *
-     * @author Bogdan Kuzenko.
-     */
-    @Transactional
-    @Override
-    public List<Long> bulkDelete(String ids) {
-        List<Long> arrayIds = Arrays
-            .stream(ids.split(","))
-            .map(Long::valueOf)
-            .toList();
-
+    public List<Long> bulkDelete(List<Long> ids) {
         List<Long> deleted = new ArrayList<>();
-        for (Long id : arrayIds) {
+        for (Long id : ids) {
             deleted.add(delete(id));
         }
         return deleted;
@@ -226,21 +157,17 @@ public class CustomToDoListItemServiceImpl implements CustomToDoListItemService 
      */
     @Override
     public List<CustomToDoListItemResponseDto> findAllAvailableCustomToDoListItems(Long userId, Long habitId) {
-        return modelMapper.map(
-            customToDoListItemRepo.findAllAvailableCustomToDoListItemsForUserId(userId, habitId),
-            new TypeToken<List<CustomToDoListItemResponseDto>>() {
-            }.getType());
-    }
-
-    @Override
-    public List<CustomToDoListItemResponseDto> findAllCustomToDoListItemsWithStatusInProgress(Long userId,
-        Long habitId) {
-        return customToDoListItemRepo
-            .findAllCustomToDoListItemsForUserIdAndHabitIdInProgress(userId, habitId)
-            .stream()
-            .map(customToDoListItem -> modelMapper.map(customToDoListItem,
-                CustomToDoListItemResponseDto.class))
-            .collect(Collectors.toList());
+        List<CustomToDoListItem> defaultCustomItems = customToDoListItemRepo.getAllCustomToDoListItemIdByHabitIdIsContained(habitId)
+                .stream()
+                .map(id -> customToDoListItemRepo.getReferenceById(id))
+                .toList();
+        List<CustomToDoListItem> customItemsByUser = customToDoListItemRepo.findAllAvailableCustomToDoListItemsForUserId(userId, habitId);
+        List<CustomToDoListItem> customItemsToReturn = new ArrayList<>();
+        customItemsToReturn.addAll(defaultCustomItems);
+        customItemsToReturn.addAll(customItemsByUser);
+        return customItemsToReturn.stream()
+                .map(customItem -> modelMapper.map(customItem, CustomToDoListItemResponseDto.class))
+                .toList();
     }
 
     /**
@@ -282,18 +209,6 @@ public class CustomToDoListItemServiceImpl implements CustomToDoListItemService 
     }
 
     /**
-     * Method for get one custom to-do list item by id.
-     *
-     * @param id a value of {@link Long}
-     * @return {@link CustomToDoListItem}
-     * @author Bogdan Kuzenko.
-     */
-    private CustomToDoListItem findOne(Long id) {
-        return customToDoListItemRepo.findById(id)
-            .orElseThrow(() -> new NotFoundException(CUSTOM_TO_DO_LIST_ITEM_NOT_FOUND_BY_ID + " " + id));
-    }
-
-    /**
      * Method returns all user's custom to-do items by status(if is defined).
      *
      * @param userId user id.
@@ -312,6 +227,6 @@ public class CustomToDoListItemServiceImpl implements CustomToDoListItemService 
             customToDoListItems = customToDoListItemRepo.findAllByUserId(userId);
         }
         return customToDoListItems.stream()
-            .map(item -> modelMapper.map(item, CustomToDoListItemResponseDto.class)).collect(Collectors.toList());
+            .map(item -> modelMapper.map(item, CustomToDoListItemResponseDto.class)).toList();
     }
 }
